--- a/src/content/post/开始.md
+++ b/src/content/post/开始.md
@@ -1,3 +1,10 @@
+---
+title: "我的第一篇博客"
+description: "记录一下个人站点的搭建过程和遇到的坑。"
+publishDate: "2026-01-29"
+tags: ["Go", "学习"]
+---
+
 # 开始
 这是一段Go代码
 ```go
